protocols/tests/fifo/push_pop_conflict.out
error: The two expressions did not evaluate to the same value
   ┌─ fifo/fifo.prot:43:15
   │
43 │     assert_eq(DUT.data_o, output); 
   │               ^^^^^^^^^^^^^^^^^^ LHS Value: 2, RHS Value: 3

